# pydanticgen-demo

./: README.md  inherited-model.yaml  inherited_model.py  inlining-model.yaml  inlining_model.py  pyproject.toml  simple-model.yaml  simple_model.py
